fixed header layout shift

--- a/src/client/styles/carousel.scss
+++ b/src/client/styles/carousel.scss
@@ -1,7 +1,9 @@
 @import "./variables";
 
 .carousel-wrapper{
+  height: 100%;
+  width: 100%;
   .img-wrapper{
-    display: flex;
+    object-fit: contain;
   }
 }
