--- a/src/client/styles/header.scss
+++ b/src/client/styles/header.scss
@@ -1,7 +1,7 @@
 @import "./variables";
 
 .header{
-  position: relative;
+  position: fixed;
   top: 0;
   left: 0;
   right: 0;
@@ -31,11 +31,12 @@
 .header.web{
   display: flex;
   font-size: 12px;
-  font-weight: 600;
+  font-weight: 600;    
+  width: 100%;
+
   .header-content{
     display: flex;
     justify-content: space-between;
-    width: 100%;
     margin: 0 1rem;
   }
   .logo{
@@ -48,6 +49,7 @@
     font-weight: bolder;
     border: 0;
     font-size: 1rem;
+    margin: 0 1rem;
   }
   .deliver-location{
     display: flex;
@@ -73,6 +75,7 @@
   .cart-sec{
     display: flex;
     align-items: center;
+    margin: 0 1rem;
   }
   .orders-sec{
     display: flex;
