--- a/src/client/styles/home.scss
+++ b/src/client/styles/home.scss
@@ -8,6 +8,8 @@
         grid-gap: 20px;
         .slider-grid{
             grid-column: 1 / 5;
+            width: 100%;
+            height: 400px;
         }
         .todays-grid{
             grid-column: 1 / 5;
